--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>Home Site</title>
+    <link rel="shortcut icon" href="static/randall/photos/icon.ico" type="image/ico">
+    <link href="static/randall/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Prompt|Trirong" rel="stylesheet">
+    <script src="static/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="static/randall/animations.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
@@ -17,9 +22,11 @@
       {% endif %}
 
       <!-- messages -->
-      {% for message in get_flashed_messages() %}
-        {{ message }}
-      {% endfor %}
+        {% for message in get_flashed_messages() %}
+        <div class="flash-content">
+          <p>{{ message }}</p>
+        </div>
+        {% endfor %}
     </div>
 
   </body>
