--- a/templates/camera.html
+++ b/templates/camera.html
@@ -2,9 +2,15 @@
 
 {% block content %}
 
-<h1>Security Cam</h1>
-<img src="static/image.jpg">
-<p><a href='/'>Home</a></p>
-<br>
-
+<div class="header">
+  <h1>Security Cam</h1>
+</div>
+<img style="margin-left:5px; margin-top:5px"src="static/image.jpg">
+<div class="buttoncontainer">
+    <a href="/" style="color:black">
+        <div class="button1">
+            <h3 style="font-family: Prompt">Home</h3>
+        </div>
+    </a>
+</div>
 {% endblock %}
