--- a/templates/randall.html
+++ b/templates/randall.html
@@ -68,6 +68,13 @@
                     </div>
                 </a>
             </div>
+            <div class="buttoncontainer">
+                <a href="/">
+                    <div class="button1">
+                        <h3 style="color:#880000">Home</h3>
+                    </div>
+                </a>
+            </div>
         </div>
         <div class="lists">
             <div class="list" id="google">
