--- a/static/randall/main.css
+++ b/static/randall/main.css
@@ -95,7 +95,7 @@ body {
 }
 
 .lists {
-  margin-left: 210px;
+  margin-left: 250px;
   margin-right: 10px;
 }
 
@@ -160,4 +160,27 @@ body {
   text-align: center;
   font-size: 14px;
   cursor: pointer;
+}
+
+.btn2 {
+  background-color: #4040df;
+  border: none;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.google-search {
+  background-color: #ededed;
+  margin-top: 10px;
+  margin-left: 10px;
+  padding: 10px;
+  border: 1px solid #888;
+  float: left;
+}
+
+input {
+  font-size: 20px;
 }
