--- a/static/randall/main.css
+++ b/static/randall/main.css
@@ -164,12 +164,21 @@ body {
 
 .btn2 {
   background-color: #4040df;
+  font-family: 'Futura';
   border: none;
   color: white;
-  padding: 10px;
+  padding: 8px;
   text-align: center;
   font-size: 14px;
   cursor: pointer;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.btn2-active {
+  background-color: #3030ad;
 }
 
 .google-search {
@@ -183,4 +192,7 @@ body {
 
 input {
   font-size: 20px;
+  top: 0;
+  bottom: 0;
+  margin: auto;
 }
