--- a/static/randall/main.css
+++ b/static/randall/main.css
@@ -156,10 +156,12 @@ body {
   background-color: #4caf50;
   border: none;
   color: white;
-  padding: 10px;
+  padding: 8px;
+  margin-top: 4px;
   text-align: center;
-  font-size: 14px;
+  font-size: 12px;
   cursor: pointer;
+  width: 100%;
 }
 
 .btn2 {
@@ -182,17 +184,23 @@ body {
 }
 
 .google-search {
-  background-color: #ededed;
   margin-top: 10px;
   margin-left: 10px;
   padding: 10px;
   border: 1px solid #888;
+  background-color: #ffffff;
   float: left;
 }
 
-input {
-  font-size: 20px;
-  top: 0;
-  bottom: 0;
-  margin: auto;
+input#q {
+  font-size: 16px;
+  padding: 2px;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #aaaaaa;
+  transition: border-bottom 0.5s;
+}
+
+input#q[type=text]:focus {
+  border-bottom: 2px solid #8080fd;
 }
