--- a/templates/randall.html
+++ b/templates/randall.html
@@ -295,7 +295,7 @@
   </div>
   <div class="google-search">
     <form method="get" action="https://www.google.com/search" target="_blank">
-      <input type="text" name="q" size="30" value="">
+      <input type="text" id="q" name="q" size="30" value="">
       <button class="btn2" type="submit">Google</button>
     </form>
   </div>
