replaced camera link in Stuff with AUR, turned off autocomplete for google search box

--- a/templates/randall.html
+++ b/templates/randall.html
@@ -231,10 +231,10 @@
             <img class="imglink" style="width:100px; height:93px" src="static/randall/photos/dropbox.png"
                 alt="Dropbox"/>
           </div></a>
-        <a href="/camera">
-          <div class="listcontainer" title="Security Camera">
-            <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/cam.png"
-                alt="Security Camera"/>
+        <a href="https://aur.archlinux.org/">
+          <div class="listcontainer" title="Arch Linux AUR">
+            <img class="imglink" style="width:120px; height:90px" src="static/randall/photos/arch.png"
+                alt="Arch Linux AUR"/>
           </div></a>
         <a href="https://www.amazon.com" target="_blank">
           <div class="listcontainer" title="Amazon">
@@ -295,7 +295,7 @@
   </div>
   <div class="google-search">
     <form method="get" action="https://www.google.com/search" target="_blank">
-      <input type="text" id="q" name="q" size="30" value="">
+      <input type="text" id="q" name="q" size="30" value="" autocomplete="off">
       <button class="btn2" type="submit">Google</button>
     </form>
   </div>
