fixed google search button font issue on Linux

--- a/static/randall/main.css
+++ b/static/randall/main.css
@@ -166,7 +166,7 @@ body {
 
 .btn2 {
   background-color: #4040df;
-  font-family: 'Futura';
+  font-family: 'Product Sans', 'Futura';
   border: none;
   color: white;
   padding: 8px;
