--- a/templates/randall.html
+++ b/templates/randall.html
@@ -4,7 +4,7 @@
   <title>Get Started</title>
   <link rel="shortcut icon" href="static/randall/photos/icon.ico" type="image/ico">
   <link href="static/randall/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Prompt|Trirong" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Prompt|Trirong|Product+Sans" rel="stylesheet">
   <script src="static/jquery-1.12.4.min.js"></script>
   <script type="text/javascript" src="static/randall/animations.js"></script>
   <script type="text/javascript" src="static/randall/main.js"></script>
