added fantasy football

--- a/templates/randall.html
+++ b/templates/randall.html
@@ -246,6 +246,11 @@
             <img class="imglink" style="width:110px; height:29px" src="static/randall/photos/ifttt.png"
                 alt="IFTTT"/>
           </div></a>
+        <a href="http://www.espn.com/fantasy/football/" target="_blank">
+          <div class="listcontainer" title="ESPN Fantasy Football">
+            <img class="imglink" style="width:160px; height:120px" src="static/randall/photos/espnffb.png"
+                alt="ESPN Fantasy Football"/>
+          </div></a>
         <a href="https://www.panerabread.com/en-us/home.html" target="_blank">
           <div class="listcontainer" title="Panera Bread">
             <img class="imglink" style="width:90px; height:90px" src="static/randall/photos/panera.png"
