fixed nytimes crossword link

--- a/templates/randall.html
+++ b/templates/randall.html
@@ -256,7 +256,7 @@
             <img class="imglink" style="width:90px; height:90px" src="static/randall/photos/panera.png"
                 alt="Panera Bread"/>
           </div></a>
-        <a href="https://www.newyorktimes.com/crossword/index.html" target="_blank">
+        <a href="https://www.nytimes.com/crossword/index.html" target="_blank">
           <div class="listcontainer" title="NY Times Crossword">
             <img class="imglink" style="width:90px; height:90px" src="static/randall/photos/nytxword.png"
                 alt="NY Times Crossword"/>
