--- a/templates/travis.html
+++ b/templates/travis.html
@@ -4,7 +4,7 @@
     <title>Get Started</title>
     <link rel="shortcut icon" href="static/travis/photos/icon.ico" type="image/ico">
     <link href="static/travis/main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Prompt|Trirong" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Prompt|Trirong|Product+Sans" rel="stylesheet">
     <script src="static/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="static/travis/animations.js"></script>
     <script type="text/javascript" src="static/travis/main.js"></script>
@@ -225,6 +225,12 @@
                     </div></a>
             </div>
         </div>
+    </div>
+    <div class="google-search">
+      <form method="get" action="https://www.google.com/search" target="_blank">
+        <input type="text" id="q" name="q" size="30" value="" autocomplete="off">
+        <button class="btn2" type="submit">Google</button>
+      </form>
     </div>
 </body>
 </html>
