--- a/templates/randall.html
+++ b/templates/randall.html
@@ -118,11 +118,6 @@
             <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/flights.png"
                 alt="Flights"/>
           </div></a>
-        <a href="https://www.google.com" target="_blank">
-          <div class="listcontainer" title="Search">
-            <img class="imglink" style="width:140px; height:140px" src="static/randall/photos/google.png"
-                alt="Search"/>
-          </div></a>
       </div>
       <div class="list" id="social">
         <a href="https://www.twitter.com" target="_blank">
@@ -231,10 +226,10 @@
             <img class="imglink" style="width:100px; height:93px" src="static/randall/photos/dropbox.png"
                 alt="Dropbox"/>
           </div></a>
-        <a href="https://aur.archlinux.org/">
-          <div class="listcontainer" title="Arch Linux AUR">
+        <a href="https://wiki.archlinux.org/">
+          <div class="listcontainer" title="Arch Linux Wiki">
             <img class="imglink" style="width:120px; height:90px" src="static/randall/photos/arch.png"
-                alt="Arch Linux AUR"/>
+                alt="Arch Linux Wiki"/>
           </div></a>
         <a href="https://www.amazon.com" target="_blank">
           <div class="listcontainer" title="Amazon">
