--- a/static/randall/main.css
+++ b/static/randall/main.css
@@ -192,6 +192,83 @@ body {
   float: left;
 }
 
+#control-panel {
+  background-color: #eeeeee;
+  margin: 10px;
+  float: left;
+  width: 300px;
+}
+
+.control {
+  margin: 5px;
+  position: relative;
+}
+
+.slider-label {
+  position: absolute;
+  margin-left: 70px;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin: 5px;
+}
+
+.switch input {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
 input#q {
   font-size: 16px;
   padding: 2px;
