--- a/templates/randall.html
+++ b/templates/randall.html
@@ -69,7 +69,7 @@
           </a>
         </div>
         <div class="buttoncontainer">
-          <a href="/">
+          <a href="/home">
             <div class="button1">
               <h3 style="color:#880000">Home</h3>
             </div>
