added camera picture to 'home' page

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,5 +81,8 @@
     </label>
   </div>
 </div>
+<div id="camera-pic">
+  <a href="/camera"><img style="margin-top: 10px; width: 433px; height: 325px;" src="static/image.jpg" /></a>
+</div>
 
 {% endblock %}
