added timestamp to image src's to prevent caching

--- a/templates/camera.html
+++ b/templates/camera.html
@@ -5,9 +5,9 @@
 <div class="header">
   <h1>Security Cam</h1>
 </div>
-<img style="margin-left:5px; margin-top:5px"src="static/image.jpg">
+<img style="margin-left:5px; margin-top:5px"src="static/image.jpg?mod={{timestamp}}">
 <div class="buttoncontainer">
-    <a href="/" style="color:black">
+    <a href="{{url_for('home')}}" style="color:black">
         <div class="button1">
             <h3 style="font-family: Prompt">Home</h3>
         </div>
