--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
   </div>
 </div>
 <div id="camera-pic">
-  <a href="/camera"><img style="margin-top: 10px; width: 433px; height: 325px;" src="static/image.jpg" /></a>
+  <a href="/camera"><img style="margin-top: 10px; width: 433px; height: 325px;" src="static/image.jpg?mod={{timestamp}}" /></a>
 </div>
 
 {% endblock %}
