changed some fonts, added a personal home page

--- a/templates/randall.html
+++ b/templates/randall.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Get Started</title>
+  <title>Welcome</title>
   <link rel="shortcut icon" href="static/randall/photos/icon.ico" type="image/ico">
   <link href="static/randall/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Prompt|Trirong|Product+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rubik|Bungee+Inline|Product+Sans" rel="stylesheet">
   <script src="static/jquery-1.12.4.min.js"></script>
   <script type="text/javascript" src="static/randall/animations.js"></script>
   <script type="text/javascript" src="static/randall/main.js"></script>
@@ -12,7 +12,7 @@
 <body onload="updateClock(); setInterval('updateClock()', 1000); getWeather(); setInterval('getWeather()', 300000)">
   <div class="header">
     <div class="container">
-      <h1>Get Started</h1>
+      <h1>Welcome</h1>
       <p><span id="clock">&nbsp;</span></p>
       <p><span id="weather">&nbsp;</span></p>
     </div>
@@ -179,11 +179,6 @@
           </div></a>
       </div>
       <div class="list" id="programming">
-        <a href="https://www.codecademy.com" target="_blank">
-          <div class="listcontainer" title="Codecademy">
-            <img class="imglink" style="width:90px; height:90px" src="static/randall/photos/codecademy.png"
-                alt="Codecademy"/>
-          </div></a>
         <a href="https://github.com" target="_blank">
           <div class="listcontainer" title="GitHub">
                 <img class="imglink" style="width:120px; height:49px" src="static/randall/photos/github.png"
@@ -263,7 +258,7 @@
             <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/pocket.png"
                 alt="Pocket"/>
           </div></a>
-        <a href="https://www.wsj.com" target="_blank">
+        <a href="http://www.wsj.com" target="_blank">
           <div class="listcontainer" title="Wall Street Journal">
             <img class="imglink" style="width:100px; height:50px" src="static/randall/photos/wsj.png"
                 alt="WSJ"/>
