--- a/static/randall/main.css
+++ b/static/randall/main.css
@@ -11,8 +11,71 @@ body {
   padding: 0;
 }
 
+.header-home {
+  height: 50px;
+}
+
+.navcont {
+  background: #eeeeee;
+  display: inline-block;
+  width: 100%;
+  height: 50px;
+}
+
+.menuitem {
+  font-family: 'Rubik', sans-serif;
+  width: 10%;
+  float: left;
+  height: 50px;
+  position: relative;
+}
+
+.menutxt {
+  text-decoration: none;
+  color: #000;
+  text-align: center;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.pagetitle {
+  font-family: 'Rubik', serif;
+  float: right;
+  padding-right: 10px;
+  height: 50px;
+  position: relative;
+}
+
+.titletext {
+  margin: 0;
+  white-space: nowrap;
+  line-height: 50px;
+  text-align: center;
+}
+
+.active-home {
+  background-color: #009977;
+}
+
+.whitetxt {
+  color: #fff;
+}
+
+.main-stuff {
+  background-color: #eee;
+  margin: 150px;
+  padding: 50px;
+}
+
+.main-stuff {
+  font-family: "Rubik", sans-serif;
+}
+
 .header {
-  font-family: 'Trirong', serif;
+  font-family: 'Rubik', cursive;
   background-color: #cccccc;
   border-bottom: 1px solid #eeeeee;
   margin: 0;
@@ -68,7 +131,7 @@ body {
 
 .active {
   background: #7aaadd;
-  box-shadow: 0 4px 8px 0 #000000;
+  box-shadow: 0 1px 3px 0 #111;
 }
 
 .clicked {
@@ -86,7 +149,7 @@ body {
 }
 
 .buttons {
-  font-family: 'Prompt', sans-serif;
+  font-family: 'Rubik', sans-serif;
   float: left;
   width: 240px;
   height: 1049px;
@@ -101,7 +164,7 @@ body {
 
 .list {
   background: #ffffff;
-  box-shadow: 0 5px 10px #000000;
+  box-shadow: 0 1px 3px #000000;
   margin: 0;
   display: none;
   width: auto;
@@ -118,6 +181,8 @@ body {
 
 .imgactive {
   background: #aaaaaa;
+  box-shadow: 0 1px 3px #222;
+  z-index: 1
 }
 
 .txtactive {
@@ -135,7 +200,7 @@ body {
 
 .flash-content {
   background-color: #fdfdfd;
-  font-family: 'Prompt';
+  font-family: 'Rubik';
   margin-top: 5px;
   margin-left: 5px;
   padding: 20px;
@@ -187,9 +252,9 @@ body {
   margin-top: 10px;
   margin-left: 10px;
   padding: 10px;
-  border: 1px solid #888;
   background-color: #ffffff;
   float: left;
+  box-shadow: 0 1px 3px 0 #222;
 }
 
 #control-panel {
