--- a/templates/index.html
+++ b/templates/index.html
@@ -1,81 +1,26 @@
-{% extends 'base.html' %}
-
-{% block content %}
-<script src="static/randall/home.js" type="text/javascript"></script>
-<div class="header">
-  <h1>Home</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Randall Spears</title>
+    <link type="text/css" rel="stylesheet" href="static/randall/main.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+    <script type="text/javascript" src="static/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="static/randall/animations.js"></script>
+</head>
+<body>
+<div class="header-home">
+    <div class="navcont">
+        <a href="{{url_for('homepage')}}"><div class="menuitem"><h4 class="menutxt">HOME</h4></div></a>
+        <a href="javascript:void(0)"><div class="menuitem"><h4 class="menutxt">PROJECTS</h4></div></a>
+        <a href="javascript:void(0)"><div class="menuitem"><h4 class="menutxt">ABOUT</h4></div></a>
+        <div class="pagetitle"><h1 class="titletxt">Randall Spears</h1></div>
+    </div>
 </div>
-<div class="buttons">
-  <div class="buttoncontainer">
-    <a href='/randall'>
-      <div class="button1">
-        <h3>Start Page</h3>
-      </div>
-    </a>
-  </div>
-  <div class="buttoncontainer">
-    <a href='/logout'>
-      <div class="button1">
-        <h3>Logout</h3>
-      </div>
-    </a>
-  </div>
+<div class="main-stuff">
+  <h2>In Progress</h2>
+  <p>
+    I'm working on getting this site up and running!
+  </p>
 </div>
-<div id="control-panel">
-  <div class="control" style="border-bottom: solid 1px black;">
-    <span class="slider-label">All Lights</span>
-    <label class="switch" id="all">
-      <input type="checkbox" />
-      <div class="slider round">
-      </div>
-    </label>
-  </div>
-  <div class="control">
-    <span class="slider-label">Living Room</span>
-    <label class="switch" id="g-1">
-      <input type="checkbox" />
-      <div class="slider round">
-      </div>
-    </label>
-  </div>
-  <div class="control">
-    <span class="spacer" style="width: 10px; display: inline-block;"></span>
-    <span class="slider-label">Floor Lamp</span>
-    <label class="switch" id="l-2">
-      <input type="checkbox" />
-      <div class="slider round">
-      </div>
-    </label>
-  </div>
-  <div class="control">
-    <span class="spacer" style="width: 10px; display: inline-block;"></span>
-    <span class="slider-label">Desk Lamp</span>
-    <label class="switch" id="l-3">
-      <input type="checkbox" />
-      <div class="slider round">
-      </div>
-    </label>
-  </div>
-  <div class="control" style="border-bottom: solid 1px black;">
-    <span class="spacer" style="width: 10px; display: inline-block;"></span>
-    <span class="slider-label">Duck Lamp</span>
-    <label class="switch" id="l-1">
-      <input type="checkbox" />
-      <div class="slider round">
-      </div>
-    </label>
-  </div>
-  <div class="control">
-    <span class="slider-label">Hue Go</span>
-    <label class="switch" id="l-4">
-      <input type="checkbox" />
-      <div class="slider round">
-      </div>
-    </label>
-  </div>
-</div>
-<div id="camera-pic">
-  <a href="/camera"><img style="margin-top: 10px; width: 433px; height: 325px;" src="static/image.jpg?mod={{timestamp}}" /></a>
-</div>
-
-{% endblock %}
+</body>
+</html>
