fixed Home buttons (font on camera page, color on start page)

--- a/static/randall/main.css
+++ b/static/randall/main.css
@@ -52,8 +52,7 @@ body {
 .titletext {
   margin: 0;
   white-space: nowrap;
-  line-height: 50px;
-  text-align: center;
+  top: 50%;
 }
 
 .active-home {
