--- a/templates/camera.html
+++ b/templates/camera.html
@@ -9,7 +9,7 @@
 <div class="buttoncontainer">
     <a href="{{url_for('home')}}" style="color:black">
         <div class="button1">
-            <h3 style="font-family: Prompt">Home</h3>
+            <h3 style="font-family: Rubik">Home</h3>
         </div>
     </a>
 </div>
