--- a/templates/randall.html
+++ b/templates/randall.html
@@ -71,7 +71,7 @@
         <div class="buttoncontainer">
           <a href="{{url_for('home')}}">
             <div class="button1">
-              <h3 style="color:#880000">Home</h3>
+              <h3>Home</h3>
             </div>
           </a>
         </div>
