refactored the entire site

--- a/personal/templates/index.html
+++ b/personal/templates/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="header-home">
     <div class="navcont">
-        <a href="{{url_for('homepage')}}"><div class="menuitem"><h4 class="menutxt">HOME</h4></div></a>
+        <a href="{{url_for('personal.homepage')}}"><div class="menuitem"><h4 class="menutxt">HOME</h4></div></a>
         <a href="javascript:void(0)"><div class="menuitem"><h4 class="menutxt">PROJECTS</h4></div></a>
         <a href="javascript:void(0)"><div class="menuitem"><h4 class="menutxt">ABOUT</h4></div></a>
         <div class="pagetitle"><h1 class="titletxt">Randall Spears</h1></div>
