--- a/start/templates/randall.html
+++ b/start/templates/randall.html
@@ -69,7 +69,7 @@
           </a>
         </div>
         <div class="buttoncontainer">
-          <a href="{{url_for('home')}}">
+          <a href="{{url_for('home_ctrl.home')}}">
             <div class="button1">
               <h3>Home</h3>
             </div>
