fixed a few small routing issues

--- a/home/templates/camera.html
+++ b/home/templates/camera.html
@@ -7,7 +7,7 @@
 </div>
 <img style="margin-left:5px; margin-top:5px"src="static/image.jpg?mod={{timestamp}}">
 <div class="buttoncontainer">
-    <a href="{{url_for('home')}}" style="color:black">
+    <a href="{{url_for('home_ctrl.home')}}" style="color:black">
         <div class="button1">
             <h3 style="font-family: Rubik">Home</h3>
         </div>
