--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -7,14 +7,14 @@
 </div>
 <div class="buttons">
   <div class="buttoncontainer">
-    <a href='/randall'>
+    <a href="{{url_for('start.start_page', name='randall')}}">
       <div class="button1">
         <h3>Start Page</h3>
       </div>
     </a>
   </div>
   <div class="buttoncontainer">
-    <a href='/logout'>
+    <a href="{{url_for('home_ctrl.logout')}}">
       <div class="button1">
         <h3>Logout</h3>
       </div>
