--- a/start/templates/randall.html
+++ b/start/templates/randall.html
@@ -120,10 +120,15 @@
           </div></a>
       </div>
       <div class="list" id="social">
-        <a href="https://www.twitter.com" target="_blank">
+        <a href="https://twitter.com" target="_blank">
           <div class="listcontainer" title="Twitter">
             <img class="imglink" style="width:100px; height:81px" src="static/randall/photos/twitter.png"
                 alt="Twitter"/>
+          </div></a>
+        <a href="https://www.facebook.com" target="_blank">
+          <div class="listcontainer" title="Facebook">
+            <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/facebook.gif"
+                alt="Facebook"/>
           </div></a>
         <a href="https://www.linkedin.com" target="_blank">
           <div class="listcontainer" title="LinkedIn">
