--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -22,6 +22,7 @@
   </div>
 </div>
 <div id="control-panel">
+  <h3 id="control-panel-title">Hue Lights</h3>
   <div class="control" style="border-bottom: solid 1px black;">
     <span class="slider-label">All Lights</span>
     <label class="switch" id="all">
@@ -75,7 +76,7 @@
   </div>
 </div>
 <div id="camera-pic">
-  <a href="/camera"><img style="margin-top: 10px; width: 433px; height: 325px;" src="static/image.jpg?mod={{timestamp}}" /></a>
+  <a href="/camera"><img style="margin-top: 10px; width: 433px; height: 325px; border-radius: 10px;" src="static/image.jpg?mod={{timestamp}}" /></a>
 </div>
 
 {% endblock %}
