--- a/start/templates/randall.html
+++ b/start/templates/randall.html
@@ -75,6 +75,20 @@
             </div>
           </a>
         </div>
+        <div class="buttoncontainer">
+          <a href="/tunes/Music">
+            <div class="button1">
+              <h3>Music</h3>
+            </div>
+          </a>
+        </div>
+        <div class="buttoncontainer">
+          <a href="{{url_for('eng.home')}}">
+            <div class="button1">
+              <h3>Engineering</h3></h3>
+            </div>
+          </a>
+        </div>
       </div>
     <div class="lists">
       <div class="list" id="google">
