--- a/personal/templates/index.html
+++ b/personal/templates/index.html
@@ -13,6 +13,7 @@
         <a href="{{url_for('personal.homepage')}}"><div class="menuitem"><h4 class="menutxt">HOME</h4></div></a>
         <a href="javascript:void(0)"><div class="menuitem"><h4 class="menutxt">PROJECTS</h4></div></a>
         <a href="javascript:void(0)"><div class="menuitem"><h4 class="menutxt">ABOUT</h4></div></a>
+        <a href="{{url_for('start.start_page', name='randall')}}"><div class="menuitem"><h4 class="menutxt">START PAGE</h4></div></a>
         <div class="pagetitle"><h1 class="titletxt">Randall Spears</h1></div>
     </div>
 </div>
