added a closing parethesis)

--- a/music/templates/music.html
+++ b/music/templates/music.html
@@ -11,6 +11,6 @@
 	{% endfor %}
 	</ul>
 	<a href='/tunes/{{'/'.join(filepath.split('/')[:-1])}}'>Back</a>
-	<a href="{{url_for('start.start_page',name='randall'}}">Start Page</a>
+	<a href="{{url_for('start.start_page', name='randall')}}">Start Page</a>
 </body>
 </html>
