--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -41,8 +41,8 @@
   </div>
   <div class="control">
     <span class="spacer" style="width: 10px; display: inline-block;"></span>
-    <span class="slider-label">Floor Lamp</span>
-    <label class="switch" id="l-2">
+    <span class="slider-label">Northwest</span>
+    <label class="switch" id="l-6">
       <input type="checkbox" />
       <div class="slider round">
       </div>
@@ -50,8 +50,8 @@
   </div>
   <div class="control">
     <span class="spacer" style="width: 10px; display: inline-block;"></span>
-    <span class="slider-label">Desk Lamp</span>
-    <label class="switch" id="l-3">
+    <span class="slider-label">Northeast</span>
+    <label class="switch" id="l-7">
       <input type="checkbox" />
       <div class="slider round">
       </div>
@@ -59,8 +59,17 @@
   </div>
   <div class="control" style="border-bottom: solid 1px black;">
     <span class="spacer" style="width: 10px; display: inline-block;"></span>
-    <span class="slider-label">Duck Lamp</span>
-    <label class="switch" id="l-1">
+    <span class="slider-label">Southwest</span>
+    <label class="switch" id="l-5">
+      <input type="checkbox" />
+      <div class="slider round">
+      </div>
+    </label>
+  </div>
+  <div class="control" style="border-bottom: solid 1px black;">
+    <span class="spacer" style="width: 10px; display: inline-block;"></span>
+    <span class="slider-label">Southeast</span>
+    <label class="switch" id="l-8">
       <input type="checkbox" />
       <div class="slider round">
       </div>
