--- a/start/templates/randall.html
+++ b/start/templates/randall.html
@@ -294,15 +294,20 @@
           </div></a>
       </div>
       <div class="list" id="bills">
-        <a href="https://www.att.com" target="_blank">
-          <div class="listcontainer" title="AT&T">
-            <img class="imglink" style="width:120px; height:120px" src="static/randall/photos/att.png"
-                alt="AT&T"/>
+        <a href="https://www.wm.com" target="_blank">
+          <div class="listcontainer" title="Waste Management">
+            <img class="imglink" style="width:120px; height:46px" src="static/randall/photos/wm.png"
+                alt="Waste Management"/>
           </div></a>
-        <a href="https://www.jea.com" target="_blank">
-          <div class="listcontainer" title="JEA">
-            <img class="imglink" style="width:120px; height:62px" src="static/randall/photos/jea.png"
-                alt="JEA"/>
+        <a href="https://www.xcelenergy.com/" target="_blank">
+          <div class="listcontainer" title="Xcel Energy">
+            <img class="imglink" style="width:120px; height:34px" src="static/randall/photos/xcel.png"
+                alt="Xcel Energy"/>
+          </div></a>
+        <a href="http://my.xfinity.com/?cid=cust" target="_blank">
+          <div class="listcontainer" title="xfinity">
+            <img class="imglink" style="width:120px; height:39px" src="static/randall/photos/xfinity.png"
+                alt="xfinity"/>
           </div></a>
       </div>
     </div>
