--- a/static/randall/main.css
+++ b/static/randall/main.css
@@ -4,9 +4,9 @@
 }
 
 body {
-  background-image: url('photos/coolbridge.jpg');
-  background-size: 2000px 1325px;
-  background-position: -100px -200px;
+  background-image: url('photos/flatirons.jpg');
+  background-size: 1801px 1200px;
+  background-position: -300px 0px;
   margin: 0;
   padding: 0;
 }
