removed nytimes crossword and panera, added trouts fly fishing

--- a/start/templates/randall.html
+++ b/start/templates/randall.html
@@ -260,15 +260,10 @@
             <img class="imglink" style="width:160px; height:120px" src="static/randall/photos/espnffb.png"
                 alt="ESPN Fantasy Football"/>
           </div></a>
-        <a href="https://www.panerabread.com/en-us/home.html" target="_blank">
-          <div class="listcontainer" title="Panera Bread">
-            <img class="imglink" style="width:90px; height:90px" src="static/randall/photos/panera.png"
-                alt="Panera Bread"/>
-          </div></a>
-        <a href="https://www.nytimes.com/crossword/index.html" target="_blank">
-          <div class="listcontainer" title="NY Times Crossword">
-            <img class="imglink" style="width:90px; height:90px" src="static/randall/photos/nytxword.png"
-                alt="NY Times Crossword"/>
+        <a href="https://troutsflyfishing.com/info/fishing-information" target="_blank">
+          <div class="listcontainer" title="Trouts Fly Fishing - Fishing Report">
+            <img class="imglink" style="width:120px; height:59px" src="static/randall/photos/trouts.png"
+                alt="Trouts Fly Fishing"/>
           </div></a>
         </div>
       <div class="list" id="news">
