--- a/start/templates/randall.html
+++ b/start/templates/randall.html
@@ -220,6 +220,26 @@
           </div></a>
       </div>
       <div class="list" id="stuff">
+        <a href="https://www.dropbox.com" target="_blank">
+          <div class="listcontainer" title="Dropbox">
+            <img class="imglink" style="width:100px; height:93px" src="static/randall/photos/dropbox.png"
+                alt="Dropbox"/>
+          </div></a>
+        <a href="https://www.amazon.com" target="_blank">
+          <div class="listcontainer" title="Amazon">
+            <img class="imglink" style="width:100px; height=100px" src="static/randall/photos/amazon.png"
+                alt="Amazon"/>
+          </div></a>
+          <a href="https://open.spotify.com/browse" target="_blank">
+            <div class="listcontainer" title="Spotify Web Player">
+              <img class="imglink" style="width:100px; height=100px" src="static/randall/photos/spotify.png"
+                  alt="Spotify"/>
+            </div></a>
+          <a href="https://play.nugs.net/#/catalog/latest" target="_blank">
+            <div class="listcontainer" title="Nugs">
+              <img class="imglink" style="width:100px; height=100px" src="static/randall/photos/nugs.png"
+                  alt="Nugs"/>
+            </div></a>
         <a href="https://www.onenote.com/notebooks?auth=1" target="_blank">
           <div class="listcontainer" title="OneNote">
             <img class="imglink" style="width:100; height:100px" src="static/randall/photos/onenote.png"
@@ -235,20 +255,10 @@
             <img class="imglink" style="width:120px; height:72px" src="static/randall/photos/wunderground.png"
                 alt="Weather Underground"/>
           </div></a>
-        <a href="https://www.dropbox.com" target="_blank">
-          <div class="listcontainer" title="Dropbox">
-            <img class="imglink" style="width:100px; height:93px" src="static/randall/photos/dropbox.png"
-                alt="Dropbox"/>
-          </div></a>
         <a href="https://wiki.archlinux.org/">
           <div class="listcontainer" title="Arch Linux Wiki">
             <img class="imglink" style="width:120px; height:90px" src="static/randall/photos/arch.png"
                 alt="Arch Linux Wiki"/>
-          </div></a>
-        <a href="https://www.amazon.com" target="_blank">
-          <div class="listcontainer" title="Amazon">
-            <img class="imglink" style="width:100px; height=100px" src="static/randall/photos/amazon.png"
-                alt="Amazon"/>
           </div></a>
         <a href="http://www.ifttt.com" target="_blank">
           <div class="listcontainer" title="IFTTT">
