changed Inbox to Gmail

--- a/start/templates/randall.html
+++ b/start/templates/randall.html
@@ -92,10 +92,10 @@
       </div>
     <div class="lists">
       <div class="list" id="google">
-        <a href="https://inbox.google.com" target="_blank">
-          <div class="listcontainer" title="Inbox">
-            <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/inbox.png"
-                alt="Inbox"/>
+        <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">
+          <div class="listcontainer" title="Gmail">
+            <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/gmail.png"
+                alt="Gmail"/>
           </div></a>
         <a href="https://calendar.google.com/calendar/render#main_7%7Cmonth" target="_blank">
           <div class="listcontainer" title="Calendar">
