--- a/start/templates/randall.html
+++ b/start/templates/randall.html
@@ -235,10 +235,10 @@
               <img class="imglink" style="width:100px; height=100px" src="static/randall/photos/spotify.png"
                   alt="Spotify"/>
             </div></a>
-          <a href="https://play.nugs.net/#/catalog/latest" target="_blank">
-            <div class="listcontainer" title="Nugs">
-              <img class="imglink" style="width:100px; height=100px" src="static/randall/photos/nugs.png"
-                  alt="Nugs"/>
+          <a href="https://rspears.me:52200" target="_blank">
+            <div class="listcontainer" title="JRiver Panel">
+              <img class="imglink" style="width:100px; height=100px" src="static/randall/photos/jriver.png"
+                  alt="JRiver Panel"/>
             </div></a>
         <a href="https://www.onenote.com/notebooks?auth=1" target="_blank">
           <div class="listcontainer" title="OneNote">
