edited jriver link

--- a/start/templates/randall.html
+++ b/start/templates/randall.html
@@ -235,7 +235,7 @@
               <img class="imglink" style="width:100px; height=100px" src="static/randall/photos/spotify.png"
                   alt="Spotify"/>
             </div></a>
-          <a href="https://rspears.me:52200" target="_blank">
+          <a href="http://music.rspears.me:52199" target="_blank">
             <div class="listcontainer" title="JRiver Panel">
               <img class="imglink" style="width:100px; height=100px" src="static/randall/photos/jriver.png"
                   alt="JRiver Panel"/>
