removed home and music tiles, fixed https wx

--- a/start/templates/randall.html
+++ b/start/templates/randall.html
@@ -69,20 +69,6 @@
           </a>
         </div>
         <div class="buttoncontainer">
-          <a href="{{url_for('home_ctrl.home')}}">
-            <div class="button1">
-              <h3>Home</h3>
-            </div>
-          </a>
-        </div>
-        <div class="buttoncontainer">
-          <a href="/tunes/Music">
-            <div class="button1">
-              <h3>Music</h3>
-            </div>
-          </a>
-        </div>
-        <div class="buttoncontainer">
           <a href="{{url_for('eng.home')}}">
             <div class="button1">
               <h3>Engineering</h3></h3>
@@ -314,6 +300,11 @@
             <img class="imglink" style="width:120px; height:39px" src="static/randall/photos/xfinity.png"
                 alt="xfinity"/>
           </div></a>
+        <a href="https://uwm.loanadministration.com/" target="_blank">
+          <div class="listcontainer" title="UWM">
+            <img class="imglink" style="width:110px; height:50px" src="static/randall/photos/uwm.png"
+              alt="UWM"/>
+            </div></a>
       </div>
     </div>
   </div>
