--- a/start/templates/randall.html
+++ b/start/templates/randall.html
@@ -1,318 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome</title>
-  <link rel="shortcut icon" href="static/randall/photos/icon.ico" type="image/ico">
-  <link href="static/randall/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rubik|Bungee+Inline|Product+Sans" rel="stylesheet">
-  <script src="static/jquery-1.12.4.min.js"></script>
-  <script type="text/javascript" src="static/randall/animations.js"></script>
-  <script type="text/javascript" src="static/randall/main.js"></script>
+    <link rel="stylesheet" href="static/randall/start.css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet"> 
+    <script src="static/randall/vue.js"></script>
 </head>
-<body onload="updateClock(); setInterval('updateClock()', 1000); getWeather(); setInterval('getWeather()', 300000)">
-  <div class="header">
-    <div class="container">
-      <h1>Welcome</h1>
-      <p><span id="clock">&nbsp;</span></p>
-      <p><span id="weather">&nbsp;</span></p>
+<body>
+    <div id="app">
+        <div id="pg-header">
+            <datetime></datetime>
+            <weather></weather>
+        </div>
+        <div id="tabs">
+            <div class="list">
+                <div class="tab"><tab :listtype="stuff"></tab></div>
+                <list :listtype="stuff"></list>
+            </div>
+            <div class="list">
+                <div class="tab"><tab :listtype="googleStuff"></tab></div>
+                <list :listtype="googleStuff"></list>
+            </div>
+            <div class="list">
+                <div class="tab"><tab :listtype="money"></tab></div>
+                <list :listtype="money"></list>
+            </div>
+            <div class="list">
+                <div class="tab"><tab :listtype="social"></tab></div>
+                <list :listtype="social"></list>
+            </div>
+            <div class="list">
+                <div class="tab"><tab :listtype="bills"></tab></div>
+                <list :listtype="bills"></list>
+            </div>
+            <div class="list">
+                <div class="tab"><tab :listtype="programming"></tab></div>
+                <list :listtype="programming"></list>
+            </div>
+        </div>
+        <div id="lists">
+        </div>
     </div>
-  </div>
-  <div class="links">
-    <div class="buttons">
-      <div class="buttoncontainer">
-        <a href="javascript:void(0)">
-          <div class="button1" id="google1">
-            <h3>Google</h3>
-          </div>
-        </a>
-      </div>
-        <div class="buttoncontainer">
-          <a href="javascript:void(0)">
-            <div class="button1" id="social1">
-              <h3>Social</h3>
-            </div>
-          </a>
-        </div>
-        <div class="buttoncontainer">
-          <a href="javascript:void(0)">
-            <div class="button1" id="money1">
-              <h3>Money</h3>
-            </div>
-          </a>
-        </div>
-        <div class="buttoncontainer">
-          <a href="javascript:void(0)">
-            <div class="button1" id="programming1">
-              <h3>Programming</h3>
-            </div>
-          </a>
-        </div>
-        <div class="buttoncontainer">
-          <a href="javascript:void(0)">
-            <div class="button1" id="stuff1">
-              <h3>Stuff</h3>
-            </div>
-          </a>
-        </div>
-        <div class="buttoncontainer">
-          <a href="javascript:void(0)">
-            <div class="button1" id="news1">
-              <h3>News</h3>
-            </div>
-          </a>
-        </div>
-        <div class="buttoncontainer">
-          <a href="javascript:void(0)">
-            <div class="button1" id="bills1">
-              <h3>Bills</h3>
-            </div>
-          </a>
-        </div>
-        <div class="buttoncontainer">
-          <a href="{{url_for('eng.home')}}">
-            <div class="button1">
-              <h3>Engineering</h3></h3>
-            </div>
-          </a>
-        </div>
-      </div>
-    <div class="lists">
-      <div class="list" id="google">
-        <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">
-          <div class="listcontainer" title="Gmail">
-            <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/gmail.png"
-                alt="Gmail"/>
-          </div></a>
-        <a href="https://calendar.google.com/calendar/render#main_7%7Cmonth" target="_blank">
-          <div class="listcontainer" title="Calendar">
-            <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/calendar.png"
-                alt="Calendar"/>
-          </div></a>
-        <a href="https://www.google.com/maps" target="_blank">
-          <div class="listcontainer" title="Maps">
-            <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/maps.png"
-                alt="Maps"/>
-          </div></a>
-        <a href="https://drive.google.com/drive/my-drive" target="_blank">
-          <div class="listcontainer" title="Drive">
-            <img class="imglink" style="width:100px; height:87px" src="static/randall/photos/drive.png"
-                alt="Drive"/>
-          </div></a>
-        <a href="https://docs.google.com/spreadsheets/u/0/" target="_blank">
-          <div class="listcontainer" title="Sheets">
-            <img class="imglink" style="width: 100px; height: 100px" src="static/randall/photos/sheets.png"
-                alt="Sheets"/>
-          </div></a>
-        <a href="https://docs.google.com/document/u/0/" target="_blank">
-          <div class="listcontainer" title="Docs">
-            <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/docs.png"
-                alt="Docs"/>
-          </div></a>
-        <a href="https://www.youtube.com/" target="_blank">
-          <div class="listcontainer" title="YouTube">
-            <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/youtube.png"
-                alt="YouTube"/>
-          </div></a>
-        <a href="https://www.google.com/flights" target="_blank">
-          <div class="listcontainer" title="Flights">
-            <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/flights.png"
-                alt="Flights"/>
-          </div></a>
-      </div>
-      <div class="list" id="social">
-        <a href="https://twitter.com" target="_blank">
-          <div class="listcontainer" title="Twitter">
-            <img class="imglink" style="width:100px; height:81px" src="static/randall/photos/twitter.png"
-                alt="Twitter"/>
-          </div></a>
-        <a href="https://www.facebook.com" target="_blank">
-          <div class="listcontainer" title="Facebook">
-            <img class="imglink" style="width:100px; height:107px" src="static/randall/photos/facebook.gif"
-                alt="Facebook"/>
-          </div></a>
-        <a href="https://www.linkedin.com" target="_blank">
-          <div class="listcontainer" title="LinkedIn">
-            <img class="imglink" style="width:90px; height:90px" src="static/randall/photos/linkedin.png"
-                alt="LinkedIn"/>
-          </div></a>
-        <a href="https://www.untappd.com" target="_blank">
-          <div class="listcontainer" title="Untappd">
-            <img class="imglink" style="width:90px; height:90px" src="static/randall/photos/untappd.png"
-                alt="Untappd"/>
-          </div></a>
-        <a href="http://www.reddit.com" target="_blank">
-          <div class="listcontainer" title="Reddit">
-            <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/reddit.png"
-                alt="Reddit"/>
-          </div></a>
-      </div>
-      <div class="list" id="money">
-        <a href="https://wwws.mint.com/overview.event" target="_blank">
-          <div class="listcontainer" title="Mint">
-            <img class="imglink" style="width: 100px; height: 100px" src="static/randall/photos/mint.png"
-                alt="Mint"/>
-          </div></a>
-        <a href="https://www.americanexpress.com" target="_blank">
-          <div class="listcontainer" title="American Express">
-            <img class="imglink" style="width: 100px; height: 100px" src="static/randall/photos/amex.svg"
-                alt="American Express"/>
-          </div></a>
-        <a href="https://www.wellsfargo.com" target="_blank">
-          <div class="listcontainer" title="Wells Fargo">
-            <img class="imglink" style="width: 100px; height: 100px" src="static/randall/photos/wf.png"
-                alt="Wells Fargo"/>
-          </div></a>
-        <a href="https://www.plainscapital.com" target="_blank">
-          <div class="listcontainer" title="Plains Capital">
-            <img class="imglink" style="width: 100px; height: 58px" src="static/randall/photos/pcb.png"
-                alt="Plains Capital"/>
-          </div></a>
-        <a href="https://www.paypal.com" target="_blank">
-          <div class="listcontainer" title="PayPal">
-            <img class="imglink" style="width: 100px; height: 66px" src="static/randall/photos/paypal.png"
-                alt="PayPal"/>
-          </div></a>
-        <a href="https://invest.ameritrade.com/grid/p/site#r=home" target="_blank">
-          <div class="listcontainer" title="TD Ameritrade">
-            <img class="imglink" style="width: 100px; height: 89px" src="static/randall/photos/td.png"
-                alt="TD Ameritrade"/>
-          </div></a>
-        <a href="https://www.creditkarma.com" target="_blank">
-          <div class="listcontainer" title="Credit Karma">
-            <img class="imglink" style="width: 100px; height: 100px" src="static/randall/photos/ckarma.png"
-                alt="Credit Karma"/>
-          </div></a>
-      </div>
-      <div class="list" id="programming">
-        <a href="https://github.com" target="_blank">
-          <div class="listcontainer" title="GitHub">
-                <img class="imglink" style="width:120px; height:49px" src="static/randall/photos/github.png"
-                    alt="GitHub"/>
-          </div></a>
-        <a href="https://dashboard.heroku.com/apps" target="_blank">
-          <div class="listcontainer" title="Heroku">
-                <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/heroku.png"
-                    alt="Heroku"/>
-          </div></a>
-        <a href="https://console.developers.google.com" target="_blank">
-          <div class="listcontainer" title="Google Developer Console">
-            <img class="imglink" style="width:160px; height:120px" src="static/randall/photos/googledev.png"
-                alt="Google Developer Console"/>
-          </div></a>
-        <a href="http://www.stackoverflow.com" target="_blank">
-          <div class="listcontainer" title="Stack Overflow">
-            <img class="imglink" style="width:110px; height:110px" src="static/randall/photos/stackof.png"
-                alt="Stack Overflow"/>
-          </div></a>
-      </div>
-      <div class="list" id="stuff">
-        <a href="https://www.dropbox.com" target="_blank">
-          <div class="listcontainer" title="Dropbox">
-            <img class="imglink" style="width:100px; height:93px" src="static/randall/photos/dropbox.png"
-                alt="Dropbox"/>
-          </div></a>
-        <a href="https://www.amazon.com" target="_blank">
-          <div class="listcontainer" title="Amazon">
-            <img class="imglink" style="width:100px; height=100px" src="static/randall/photos/amazon.png"
-                alt="Amazon"/>
-          </div></a>
-          <a href="https://open.spotify.com/browse" target="_blank">
-            <div class="listcontainer" title="Spotify Web Player">
-              <img class="imglink" style="width:100px; height=100px" src="static/randall/photos/spotify.png"
-                  alt="Spotify"/>
-            </div></a>
-          <a href="http://music.rspears.me:52199" target="_blank">
-            <div class="listcontainer" title="JRiver Panel">
-              <img class="imglink" style="width:100px; height=100px" src="static/randall/photos/jriver.png"
-                  alt="JRiver Panel"/>
-            </div></a>
-        <a href="https://www.onenote.com/notebooks?auth=1" target="_blank">
-          <div class="listcontainer" title="OneNote">
-            <img class="imglink" style="width:100; height:100px" src="static/randall/photos/onenote.png"
-                alt="OneNote"/>
-          </div></a>
-        <a href="https://www.wunderlist.com/#/lists/inbox" target="_blank">
-          <div class="listcontainer" title="Wunderlist">
-            <img class="imglink" style="width:110px; height:110px" src="static/randall/photos/wunderlist.png"
-                alt="Wunderlist"/>
-          </div></a>
-        <a href="https://www.wunderground.com" target="_blank">
-          <div class="listcontainer" title="Weather Underground">
-            <img class="imglink" style="width:120px; height:72px" src="static/randall/photos/wunderground.png"
-                alt="Weather Underground"/>
-          </div></a>
-        <a href="https://wiki.archlinux.org/">
-          <div class="listcontainer" title="Arch Linux Wiki">
-            <img class="imglink" style="width:120px; height:90px" src="static/randall/photos/arch.png"
-                alt="Arch Linux Wiki"/>
-          </div></a>
-        <a href="http://www.ifttt.com" target="_blank">
-          <div class="listcontainer" title="IFTTT">
-            <img class="imglink" style="width:110px; height:29px" src="static/randall/photos/ifttt.png"
-                alt="IFTTT"/>
-          </div></a>
-        <a href="http://www.espn.com/fantasy/football/" target="_blank">
-          <div class="listcontainer" title="ESPN Fantasy Football">
-            <img class="imglink" style="width:160px; height:120px" src="static/randall/photos/espnffb.png"
-                alt="ESPN Fantasy Football"/>
-          </div></a>
-        <a href="https://troutsflyfishing.com/info/fishing-information" target="_blank">
-          <div class="listcontainer" title="Trouts Fly Fishing - Fishing Report">
-            <img class="imglink" style="width:120px; height:59px" src="static/randall/photos/trouts.png"
-                alt="Trouts Fly Fishing"/>
-          </div></a>
-        </div>
-      <div class="list" id="news">
-        <a href="https://getpocket.com/a/queue" target="_blank">
-          <div class="listcontainer" title="Pocket">
-            <img class="imglink" style="width:100px; height:100px" src="static/randall/photos/pocket.png"
-                alt="Pocket"/>
-          </div></a>
-        <a href="http://www.wsj.com" target="_blank">
-          <div class="listcontainer" title="Wall Street Journal">
-            <img class="imglink" style="width:100px; height:50px" src="static/randall/photos/wsj.png"
-                alt="WSJ"/>
-          </div></a>
-        <a href="https://www.economist.com" target="_blank">
-          <div class="listcontainer" title="The Economist">
-            <img class="imglink" style="width:100px; height:51px" src="static/randall/photos/econ.png"
-                alt="The Economist"/>
-          </div></a>
-        <a href="https://www.zerohedge.com" target="_blank">
-          <div class="listcontainer" title="ZeroHedge">
-            <img class="imglink" style="width:95px; height:52px" src="static/randall/photos/zh.svg"
-                alt="ZeroHedge"/>
-          </div></a>
-      </div>
-      <div class="list" id="bills">
-        <a href="https://www.wm.com" target="_blank">
-          <div class="listcontainer" title="Waste Management">
-            <img class="imglink" style="width:120px; height:46px" src="static/randall/photos/wm.png"
-                alt="Waste Management"/>
-          </div></a>
-        <a href="https://www.xcelenergy.com/" target="_blank">
-          <div class="listcontainer" title="Xcel Energy">
-            <img class="imglink" style="width:120px; height:34px" src="static/randall/photos/xcel.png"
-                alt="Xcel Energy"/>
-          </div></a>
-        <a href="http://my.xfinity.com/?cid=cust" target="_blank">
-          <div class="listcontainer" title="xfinity">
-            <img class="imglink" style="width:120px; height:39px" src="static/randall/photos/xfinity.png"
-                alt="xfinity"/>
-          </div></a>
-        <a href="https://uwm.loanadministration.com/" target="_blank">
-          <div class="listcontainer" title="UWM">
-            <img class="imglink" style="width:110px; height:50px" src="static/randall/photos/uwm.png"
-              alt="UWM"/>
-            </div></a>
-      </div>
-    </div>
-  </div>
-  <div class="google-search">
-    <form method="get" action="https://www.google.com/search" target="_blank">
-      <input type="text" id="q" name="q" size="30" value="" autocomplete="off">
-      <button class="btn2" type="submit">Google</button>
-    </form>
-  </div>
+    <script src="static/randall/start.js"></script>
 </body>
 </html>
